[package]
name = "higgs"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A spatial database"
repository = "https://github.com/voxelphile/higgs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
higgs_common = { path = "../higgs_common" }
left-right = "*"
dashmap = "*"
tokio = { version = "*", features = ["full"] }
quinn = "*"
bincode = "*"
serde = { version = "*", features = ["derive"] }
uuid = { version = "*", features = ["v4", "serde"] }
futures = "*"
google-cloud-storage = "*"
game_common = { path = "../../../game_common/" }
